--- a/UAPPlanet/package.json
+++ b/UAPPlanet/package.json
@@ -9,14 +9,15 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "react-markdown": "^10.1.0",
+    "@google/genai": "^1.30.0",
     "@react-three/drei": "^10.7.7",
-    "three": "^0.181.2",
     "@react-three/fiber": "^9.4.0",
-    "react": "^19.2.0",
+    "@vercel/analytics": "^1.5.0",
     "lucide-react": "^0.554.0",
+    "react": "^19.2.0",
     "react-dom": "^19.2.0",
-    "@google/genai": "^1.30.0"
+    "react-markdown": "^10.1.0",
+    "three": "^0.181.2"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
